--- a/Code/AndroidTutorial/app/src/main/AndroidManifest.xml
+++ b/Code/AndroidTutorial/app/src/main/AndroidManifest.xml
@@ -3,15 +3,18 @@
     package="com.example.androidtutorial">
 
     <application
+        android:allowBackup="true"
         android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidTutorial"
-        android:allowBackup="true">
+        android:theme="@style/Theme.AndroidTutorial">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
