--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".IntroActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
