Creation theory folder which contains explanation classes

--- a/Code/app/src/main/AndroidManifest.xml
+++ b/Code/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".LifecycleStatesActivity"
+            android:name=".theory.LifecycleStatesActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
