--- a/Code/TheoryApp/AndroidWidgetToolboxApp/app/src/main/AndroidManifest.xml
+++ b/Code/TheoryApp/AndroidWidgetToolboxApp/app/src/main/AndroidManifest.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.androidwidgettoolboxapp">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidWidgetToolboxApp">
+        android:theme="@style/Theme.AndroidWidgetToolboxApp"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OtherWidgetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ButtonsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WidgetToolboxActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditTextViewActivity"
+            android:exported="false" />
         <activity
             android:name=".BackgroundExampleActivity"
             android:exported="false" />
